fixed missing underline on mobile, changed skill-sub-heading font size, force page scroll to the top at page refresh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1119,7 +1119,7 @@ hr {
     }
 
     .skill-sub-heading {
-        font-size: 2.2rem;
+        font-size: 2.1rem;
     }
 
     #skill-lng-icon, #skill-tool-icon, #skill-concept-icon{
@@ -1148,5 +1148,9 @@ hr {
     #footer {
         padding: 50px 30px;
         display: block;
+    }
+
+    #resume-link {
+        border-bottom: 2px solid #007bff
     }
 }
